--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".ModuleActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".mijnActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
