--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         <activity android:name=".ModuleActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".mijnActivity"
+        <activity android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+xc
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
