--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ModuleActivity"
             android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ListviewActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity"
 =======
@@ -30,7 +31,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-xc
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
