--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ModuleActivity"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".ListviewActivity"></activity>
+            android:parentActivityName=".ListviewActivity"></activity>
+        <activity android:name=".ListviewActivity" android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity"
             android:label="@string/app_name">
