--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModuleActivity"
-            android:parentActivityName=".ListviewActivity"></activity>
+
+        <activity android:name=".LichtActivity" android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".ListviewActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ModuleActivity"   android:parentActivityName=".ListviewActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity"
             android:label="@string/app_name">
