--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.imtpmd">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,22 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModuleActivity"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".ListviewActivity"></activity>
+
+        <activity android:name=".ListviewActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ModuleActivity"   android:parentActivityName=".ListviewActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity"
-=======
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".LoginActivity"></activity>
-        <activity
-            android:name=".ModuleActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity" />
-        <activity
-            android:name=".ApiActivity"
->>>>>>> Add ApiActivity
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,5 +22,7 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
