--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        >
 
         <activity android:name=".ListviewActivity" android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".ModuleActivity"   android:parentActivityName=".ListviewActivity"></activity>
+        <activity android:name=".ModuleActivity"   android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity"
             android:label="@string/app_name">
